--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3",
     "twilio": "^5.10.6",
