--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node src/worker-final.js",
+    "start": "node src/app.js",
     "dev": "node src/worker-db.js",
     "bot:start": "node src/bot/server.js",
     "worker": "node src/worker-final.js",
@@ -43,6 +43,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "redis": "^4.7.1",
     "telegraf": "^4.16.3",
     "twilio": "^5.10.6",
     "ws": "^8.18.3"
