chore(env): add Redis TLS/URL guidance
Adds guidance to env.example preferring REDIS_TLS_URL for secure Redis connections.

--- a/env.example
+++ b/env.example
@@ -15,4 +15,9 @@
 3. Register Telegram webhook:
 ```bash
 curl -X POST "https://api.telegram.org/bot$TOKEN/setWebhook" \
-  -d '{"url": "YOUR_REPLIT_URL/webhook"}'
+  -d '{"url": "YOUR_REPLIT_URL/webhook"}'# Redis connection (example values for non-secrets)
+# Prefer TLS (secure) connection when available
+# - `REDIS_TLS_URL` : use `rediss://host:port` for secure TLS connections
+# - `REDIS_URL`     : fallback `redis://host:port` if TLS is not available
+# Example (local insecure): REDIS_URL=redis://localhost:6379
+# Example (cloud TLS): REDIS_TLS_URL=rediss://:password@redis-0001.example.com:6379
