--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bot:start": "node src/bot/server.js",
     "lint": "eslint . --ext .js,.mjs --max-warnings=0",
     "format": "prettier --write 'src/**/*.{js,json,md}'",
-    "test": "node --test ./tests/*.test.js || echo 'no tests'",
+    "test": "npm run test:node",
+    "test:node": "node --test --timeout=60000 ./tests/*.test.js",
     "docker:build": "docker build -t adminoroo/betrix-ui-new:latest .",
     "redis:validate": "node scripts/validate-redis-connection.js",
     "redis:monitor": "node scripts/monitor-redis-health.js",
