--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon --watch src --exec node src/app.js",
+    "build": "echo 'no build'",
     "worker": "node src/worker-final.js",
     "bot:start": "node src/bot/server.js",
     "lint": "eslint . --ext .js,.mjs --max-warnings=0",
