--- a/.github/workflows/ci-smoke-test.yml
+++ b/.github/workflows/ci-smoke-test.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Run smoke server and test health
         run: |
-          PORT=(process.env.PORT || (process.env.PORT || 10000)) COMMIT_SHA=$(git rev-parse --short HEAD) node server.js > server.log 2>&1 & PID=$!
+          PORT=${PORT:-10000}; COMMIT_SHA=$(git rev-parse --short HEAD); node server.js > server.log 2>&1 & PID=$!
           sleep 1
-          if curl -fsS http://localhost:(process.env.PORT || (process.env.PORT || 10000))/health; then echo "smoke ok"; else echo "smoke failed"; cat server.log; kill $PID; exit 1; fi
+          if curl -fsS http://localhost:${PORT}/health; then echo "smoke ok"; else echo "smoke failed"; cat server.log; kill $PID; exit 1; fi
           kill $PID
 
   preflight:
