feat(sgo): prefer SportGameOdds; remove SportMonks defaults; update prefetch fallbacks

--- a/.env.example
+++ b/.env.example
@@ -53,11 +53,10 @@ TEST_TIER=PLUS
 TEST_USER_ID=9999
 
 # Sports API Configuration
-# SportMonks API key
-SPORTSMONKS_API_KEY=your_sportsmonks_api_key
-# Set to 'true' if encountering SSL certificate validation errors in cloud environments (e.g., Render)
-# This disables strict HTTPS verification for SportMonks API calls only
-SPORTSMONKS_INSECURE=false
+# SportGameOdds (preferred primary provider)
+# Set `SPORTSGAMEODDS_API_KEY` in your deployment environment (do NOT commit keys to source)
+SPORTSGAMEODDS_API_KEY=
+SPORTSGAMEODDS_BASE=https://api.sportsgameodds.com/v2
 
 # Football-Data API key
 FOOTBALLDATA_API_KEY=your_footballdata_api_key
