--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "twilio": "^5.10.6",
     "ws": "^8.18.3"
   },
+  "devDependencies": {
+    "ajv": "^8.12.0",
+    "prom-client": "^14.0.0"
+  },
   "keywords": [
     "telegram",
     "bot",
