dev: add env helpers, core-runner/worker fixes, MockRedis queue support, Azure RAG/metrics plumbing

--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,18 @@ ALLSPORTS_HOST=allsportsapi.p.rapidapi.com
 # Replace with your SportsData.io API key
 SPORTSDATA_API_KEY=your_sportsdata_api_key
 SPORTSDATA_BASE=https://api.sportsdata.io
+
+# --- Azure OpenAI (OpenAI-compatible in Azure) ---
+# Use your Azure OpenAI resource endpoint and provisioned deployments.
+AZURE_OPENAI_API_VERSION=2024-08-01-preview
+AZURE_OPENAI_DEPLOYMENT=gpt-5-chat
+AZURE_EMBEDDINGS_DEPLOYMENT=text-embedding-3-large
+AZURE_OPENAI_ENDPOINT=https://<your-azure-endpoint>.cognitiveservices.azure.com
+AZURE_OPENAI_KEY=replace_with_your_azure_key
+
+# --- Other keys ---
+REDIS_URL=redis://default:<password>@<host>:6379
+SPORTSGAMEODDS_API_KEY=replace_with_key
+COHERE_API_KEY=replace_with_key
+
+# Note: Do NOT commit real secrets. Use platform environment variables (Render secrets, AWS Secrets Manager, etc.)
