--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -24,6 +24,7 @@ jobs:
           # Persist bun to PATH in a GitHub Actions-compatible way
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
         shell: bash
+        continue-on-error: true
 
       - name: Print versions
         run: |
