--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@google/generative-ai": "^0.24.1",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@supabase/supabase-js": "^2.26.0",
+    "ajv": "^8.12.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^1.20.4",
     "bull": "^4.16.5",
@@ -36,6 +37,7 @@
     "drizzle-orm": "^0.44.7",
     "express": "^4.22.0",
     "express-rate-limit": "^8.2.1",
+    "form-data": "^4.0.5",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "joi": "^18.0.2",
@@ -44,17 +46,12 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "prom-client": "^14.0.0",
     "redis": "^4.7.1",
     "telegraf": "^4.16.3",
     "twilio": "^5.10.6",
-    "ws": "^8.18.3",
-    "prom-client": "^14.0.0",
-    "ajv": "^8.12.0"
+    "ws": "^8.18.3"
   },
-  "devDependencies": {
-    
-  },
-  "optionalDependencies": {},
   "keywords": [
     "telegram",
     "bot",
