ci: run tests via npm test to use cross-platform Node runner

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run unified test suite
-        shell: pwsh
-        run: ./scripts/run-all-tests.ps1
+        run: npm test --silent
