ci: use Node unified test runner (node ./scripts/run-all-tests.js)

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "bot:start": "node src/bot/server.js",
     "ui:start": "node bin/start-server.js",
     "worker": "node src/worker-final.js",
-    "test": "pwsh ./scripts/run-all-tests.ps1",
-    "test:ci": "pwsh ./scripts/run-all-tests.ps1",
+    "test": "node ./scripts/run-all-tests.js",
+    "test:ci": "node ./scripts/run-all-tests.js",
     "redis:validate": "node scripts/validate-redis-connection.js",
     "redis:monitor": "node scripts/monitor-redis-health.js",
     "redis:test-handlers": "node scripts/test-redis-handlers.js",
