feat(menu): add Sign up and Talk to BETRIX buttons to main menu

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
+# Copy this file to .env.local and fill in real values. Do NOT commit .env.local.
+
+# Required
+TELEGRAM_TOKEN=
+REDIS_URL=
+DATABASE_URL=
+
+# Optional / Provider keys
+SERPAPI_KEY=
+AZURE_OPENAI_KEY=
+COHERE_API_KEY=
+SPORTSGAMEODDS_API_KEY=
+
+# Webhook secrets
+TELEGRAM_WEBHOOK_SECRET=
+WEBHOOK_SECRET=
+
+# App config
+PORT=5100
+ALLOW_LOCAL_RUN=1
 # Example env for running the Betrix bot locally
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
 DATABASE_URL=postgres://user:pass@localhost:5432/betrix_dev
