chore: add jest devDependency for CI test runs

--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
   "bugs": {
     "url": "https://github.com/maryreaky/betrix-ui-replit-/issues"
   },
-  "homepage": "https://github.com/maryreaky/betrix-ui-replit-#readme"
+  "homepage": "https://github.com/maryreaky/betrix-ui-replit-#readme",
+  "devDependencies": {
+    "jest": "30.2.0"
+  }
 }
