chore(tests): improve run-all-tests diagnostics and CI behavior; add eslint v8 devDep for local linting

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "homepage": "https://github.com/maryreaky/betrix-ui-replit-#readme",
   "devDependencies": {
+    "eslint": "8.44.0",
     "jest": "30.2.0"
   }
 }
