chore: cleanup local changes

--- a/env.example
+++ b/env.example
@@ -1,3 +1,9 @@
+## RapidAPI configuration (used by `src/api` clients)
+# Provide your RapidAPI key and optional host overrides here.
+RAPIDAPI_KEY=
+RAPIDAPI_HOST_FREE_FOOTBALL=free-football-api-data.p.rapidapi.com
+RAPIDAPI_HOST_NFL=nfl-api-data.p.rapidapi.com
+
 
 ---
 
