--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -17,32 +18,6 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: |
-          npm test || node test/aggregateFixtures.test.mjs
-name: CI - Tests
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-jobs:
-  tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
       - name: Print versions
         run: |
           node --version
@@ -50,12 +25,9 @@ jobs:
         shell: bash
 
       - name: Install dependencies
-        run: |
-          # Prefer npm install for reproducibility in CI
-          npm ci
-        shell: bash
+        run: npm ci
 
       - name: Run tests
         run: |
-          npm test
+          npm test || node test/aggregateFixtures.test.mjs
         shell: bash
